# json-size-profiler

./: Cargo.toml  README.md
crates/json-session/: Cargo.toml  README.md
crates/json-session-parser/: Cargo.toml  README.md
crates/json-session-parser/src/: json_value.rs  parser.rs
crates/json-session/src/: lib.rs  session.rs  tokenizer.rs
crates/tinyjson-session/: Cargo.toml  README.md
crates/tinyjson-session/src/: lib.rs  parser.rs
src/: json_value.rs  lib.rs  main.rs  parser.rs
