[package]
name = "json-bytes-breakdown"
version = "0.0.1"
edition = "2018"
authors = ["Markus Stange <mstange.moz@gmail.com>", "rhysd <lin90162@yahoo.co.jp>"]
description = "Creates a Gecko profile to show what takes up the most bytes in a JSON input string."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rhysd/tinyjson"
repository = "https://github.com/rhysd/tinyjson"
keywords = ["json"]
categories = [ "parsing"]

include = [
  "Cargo.toml",
  "README.md",
  "LICENSE.txt",
  "src/*.rs",
]

[dependencies]
fxprof-processed-profile = { path = "../samply/fxprof-processed-profile" }
