[package]
name = "json-size-profiler"
version = "0.0.1"
edition = "2018"
authors = ["Markus Stange <mstange.moz@gmail.com>", "rhysd <lin90162@yahoo.co.jp>"]
description = "Creates a Gecko profile to show what takes up the most bytes in a JSON input string."
license = "MIT"
readme = "README.md"
repository = "https://github.com/mstange/json-size-profiler"
keywords = ["json"]
categories = [ "parsing"]

include = [
  "Cargo.toml",
  "README.md",
  "LICENSE.txt",
  "src/*.rs",
]

[dependencies]
fxprof-processed-profile = { git = "https://github.com/mstange/samply", branch = "stack-handle" }
serde_json = "1.0.120"
smallvec = "1.13.2"

[profile.release]
debug = true
