[package]
name = "json-session"
version = "0.1.0"
edition = "2021"
authors = [
  "Markus Stange <mstange.moz@gmail.com>",
  "rhysd <lin90162@yahoo.co.jp>"
]
description = "A streaming parser for JSON which emits fragments and location spans from an iterator-style API."
license = "MIT"
readme = "README.md"
repository = "https://github.com/mstange/json-size-profiler"
keywords = ["json"]
categories = ["parsing"]
include = ["Cargo.toml", "README.md", "LICENSE.txt", "src/*.rs"]

[dependencies]
fallible-iterator = { version = "0.3", optional = true }
smallvec = "1.13.2"

[features]
default = []
fallible-iterator = ["dep:fallible-iterator"]
